...
            </objects>
            <point key="canvasLocation" x="-38" y="-630"/>
        </scene>
        <!--Detail-->
        <scene sceneID="yUG-lL-AsK">
            <objects>
                <viewController storyboardIdentifier="DetailVC" title="Detail" id="JEX-9P-axG" customClass="DetailViewController" customModule="NyTimes" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="svH-Pt-448">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Title" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="5" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="0XM-y9-sOw">
                                <rect key="frame" x="20" y="108" width="374" height="26.5"/>
...
                                    <segue destination="vC3-pB-5Vb" kind="showDetail" identifier="showDetail" id="6S0-TO-JiA"/>
                                </connections>
                            </tableViewCell>
                        </prototypes>
                        <sections/>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityLabel" value="mostPopularNewsTable"/>
                        </userDefinedRuntimeAttributes>
                        <connections>
                            <outlet property="dataSource" destination="7bK-jq-Zjz" id="Gho-Na-rnu"/>
                            <outlet property="delegate" destination="7bK-jq-Zjz" id="RA6-mI-bju"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="NY Times Most Popular" id="Zdf-7t-Un8"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Rux-fX-hf1" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="708.69565217391312" y="-630.13392857142856"/>
        </scene>
        <!--Navigation Controller-->
...
